--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,11 @@
   <body style="font-weight: bold; font-size: 2em; font-family: 'Bungee Shade', cursive; margin-top: 25%; text-align: center;">
     Update Rocks!
     <br/>
-    v0.0.25
+    <div id="version"></div>
   </body>
+  <script>
+    const version = window.location.search.split("=")[1]
+    console.log(`v${version}`)
+    document.getElementById("version").innerHTML = `v${version}`; 
+  </script>
 </html>
